--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 		<p><b>Se que la pagina no tiene nada en especial pero bueno... algo es algo, no?</b></p>
 		
 		<a href="https://www.youtube.com/channel/UCNenFhZ-K03J-fPOHEpSYeg">Has click aqui</a>
-		<i><b> Si quieres entrar a mi canal de youtube</b></i>
+		<i><b> Por si quieres entrar a mi canal de youtube</b></i>
 	</body>
 </html>
