--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		
 		<p><b>Se que la pagina no tiene nada en especial pero bueno... algo es algo, no?</b></p>
 		
-		<a href="https://www.youtube.com/channel/UCNenFhZ-K03J-fPOHEpSYeg">Has click aqui</a>
+		<a href="https://www.youtube.com/channel/UCNenFhZ-K03J-fPOHEpSYeg"><button>Has click aqui</button></a>
 		<i><b> Por si quieres entrar a mi canal de youtube</b></i>
 	</body>
 </html>
